syntax = "proto3";

package RmqProto;

option go_package = "./";

message BotJob {
  string PageId = 1;
  string PageUrl = 2;
  uint32 Action = 3;
  string Title = 4;
}

message BotJobResponse {
  string PageId = 1;
  string PageUrl = 2;
  string Title = 3;
  bool Status = 4;
  string Hash = 5;
}